--- a/package.json
+++ b/package.json
@@ -15,6 +15,39 @@
   "devDependencies": {
     "eslint": "^4.17.0",
     "eslint-plugin-promise": "^3.6.0",
-    "lerna": "^2.8.0"
+    "gulp": "^4.0.0",
+    "gulp-bump": "^3.1.3",
+    "gulp-changed": "^3.2.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-clean-css": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-conventional-changelog": "^2.0.10",
+    "gulp-copy": "^4.0.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-env": "^0.4.0",
+    "gulp-filter": "^5.1.0",
+    "gulp-git": "^2.9.0",
+    "gulp-git-push": "^2.0.0",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-inject": "^5.0.2",
+    "gulp-minify": "^3.1.0",
+    "gulp-mustache": "^4.1.0",
+    "gulp-nodemon": "^2.4.2",
+    "gulp-notify": "^3.2.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-run": "^1.7.1",
+    "gulp-sass": "^4.0.2",
+    "gulp-shell": "^0.6.5",
+    "gulp-ssh": "^0.7.0",
+    "gulp-tag-version": "^1.3.1",
+    "gulp-uglify": "^3.0.1",
+    "gulp-util": "^3.0.8",
+    "gulp-wait": "^0.0.2",
+    "gulp-watch": "^5.0.1",
+    "imagemin-pngquant": "^7.0.0",
+    "lerna": "^2.8.0",
+    "merge-stream": "^1.0.1",
+    "run-sequence": "^2.2.1",
+    "tlid": "^1.0.9"
   }
 }
